--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -15,7 +15,7 @@
 <div style="text-align:justify">
 
     <h1 id="FAQ">Notes, Errata, and Frequently Asked Questions</h1>
-    <h3>Version 2.3, effective 9/20/2019</h3>
+    <h3>Version 3.0, effective 01/13/2020</h3>
 
     <p>This document contains card clarification, errata, rule clarifications, frequently asked questions, and quick
         reference material for <em>A Game of Thrones: The Card Game</em>. The most recent version of this document is
@@ -25,7 +25,8 @@
                 class="new">red</span>.</p>
 
     <p>
-        <b>New Content (v2.3):</b>
+        <b>New Content (v3.0):</b>
+        <a href="#Rulings_and_Clarifications">Rulings and Clarifications</a>,
         <a href="#Joust_Restricted_List">Joust Restricted List</a>,
         <a href="#Melee_Restricted_List">Melee Restricted List</a>,
         <a href="#Frequently_Asked_Questions">Frequently Asked Questions</a>
@@ -355,6 +356,14 @@
     <p class="mplain"><b>Related:</b> <a href="https://thronesdb.com/card/01104" target="_blank">Arianne Martell</a> +
         <a href="https://thronesdb.com/card/08041" target="_blank">Ramsay Snow</a>.</p>
 
+    <h3 id="Card_Abilities_During_Setup" class="new">(1.9) Card Abilities During Setup</h3>
+    <p class="new">Because setup occurs before the game begins, card abilities are not active during setup unless the
+        ability specifically references setup or a timing point during setup (such as “after all agendas are announced”).
+    </p>
+    <p class="new"><em>For example: <a href="https://thronesdb.com/card/10041" target="_blank" class="new">Oldtown
+        Scholar</a> (Sands of Dorne, 41) cannot trigger its reaction after a player replenishes his or her hand during
+        step 10 of setup.</em></p>
+
     <h2 id="Card_Ability_Interpretation">2. Card Ability Interpretation</h2>
 
     <h3 id="Cannot_be_X-ed">(2.1) Cannot be {Variable}ed</h3>
@@ -535,11 +544,6 @@
         restricted cards in the same deck. A player may run as many copies of his or her chosen restricted card in a
         deck as the regular game rules (or card text) allow.</p>
 
-    <p class="new">
-        Removed (v2.3):
-        <a class="new" href="https://thronesdb.com/card/10017" target="_blank">Dorne</a> <em>(Sands of Dorne, 17)</em>
-    </p>
-
     <p><b><u>Neutral</u>:</b><br>
         <a href="https://thronesdb.com/card/06040" target="_blank">The Annals of Castle Black</a> <em>(Guarding the
             Realm, 40)</em><br>
@@ -557,37 +561,18 @@
         <a href="https://thronesdb.com/card/10050" target="_blank">Breaking Ties</a> <em>(Sands of Dorne, 50)</em><br>
         <a href="https://thronesdb.com/card/09051" target="_blank">Trade Routes</a> <em>(House of Thorns, 51)</em><br>
         <a href="https://thronesdb.com/card/12045" target="_blank">Sea of Blood</a> <em>(Kings of the Isles, 45)</em><br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/06038" class="new" target="_blank">Great Hall</a> <em>(Guarding the Realm, 38)</em>
-        </span>
-        <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/10048" class="new" target="_blank">Forced March</a> <em>(Sands of Dorne, 48)</em>
-        </span>
+        <a href="https://thronesdb.com/card/06038" target="_blank">Great Hall</a> <em>(Guarding the Realm, 38)</em><br>
+        <a href="https://thronesdb.com/card/10048" target="_blank">Forced March</a> <em>(Sands of Dorne, 48)</em>
     </p>
 
     <p>
         <b><u>Greyjoy</u>:</b><br>
-        <a href="https://thronesdb.com/card/02091" target="_blank">Raider from Pyke</a> <em>(Calm Over Westeros, 91)</em>
-        <br>
-        <a href="https://thronesdb.com/card/02092" target="_blank">Iron Mines</a> <em>(Calm Over Westeros, 92)</em>
-        <br>
-        <a href="https://thronesdb.com/card/11051" target="_blank">Drowned God Fanatic</a> <em>(Streets of King's Landing, 51)</em>
-        <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/06011" class="new" target="_blank">Drowned Disciple</a>
-            <em>(All Men Are Fools, 11)</em>
-        </span>
-        <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/12002" class="new" target="_blank">Euron Crow’s Eye</a>
-            <em>(Kings of the Isles, 2)</em>
-        </span>
-        <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/12046" class="new" target="_blank">We Take Westeros!</a>
-            <em>(Kings of the Isles, 46)</em>
-        </span>
+        <a href="https://thronesdb.com/card/02091" target="_blank">Raider from Pyke</a> <em>(Calm Over Westeros, 91)</em><br>
+        <a href="https://thronesdb.com/card/02092" target="_blank">Iron Mines</a> <em>(Calm Over Westeros, 92)</em><br>
+        <a href="https://thronesdb.com/card/11051" target="_blank">Drowned God Fanatic</a> <em>(Streets of King's Landing, 51)</em><br>
+        <a href="https://thronesdb.com/card/06011" target="_blank">Drowned Disciple</a><em>(All Men Are Fools, 11)</em><br>
+        <a href="https://thronesdb.com/card/12002" target="_blank">Euron Crow’s Eye</a><em>(Kings of the Isles, 2)</em><br>
+        <a href="https://thronesdb.com/card/12046" target="_blank">We Take Westeros!</a><em>(Kings of the Isles, 46)</em>
     </p>
 
     <p>
@@ -599,30 +584,22 @@
     <p>
         <b><u>Martell</u>:</b><br>
         <a href="https://thronesdb.com/card/01109" target="_blank">The Red Viper</a> <em>(Core, 109)</em><br>
-        <a href="https://thronesdb.com/card/04017" target="_blank">Tower of the Sun</a> <em>(Across the Seven Kingdoms, 17)</em>
-        <br>
-        <a href="https://thronesdb.com/card/11076" target="_blank">A Mission in Essos</a> <em>(Music of Dragons, 76)</em>
-        <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/12029" class="new" target="_blank">Desert Raider</a>
-            <em>(Kings of the Isles, 29)</em>
-        </span>
+        <a href="https://thronesdb.com/card/04017" target="_blank">Tower of the Sun</a> <em>(Across the Seven Kingdoms, 17)</em><br>
+        <a href="https://thronesdb.com/card/11076" target="_blank">A Mission in Essos</a> <em>(Music of Dragons, 76)</em><br>
+        <a href="https://thronesdb.com/card/12029" target="_blank">Desert Raider</a><em>(Kings of the Isles, 29)</em>
     </p>
 
+    <p class="new">
+        <b><u>Night's Watch</u></b><br>
+        <a href="https://thronesdb.com/card/13085" target="_blank" class="new">Yoren</a> <em>(The Blackwater, 85)</em><br>
+        <a href="https://thronesdb.com/card/13086" target="_blank" class="new">Bound for the Wall</a> <em>(The Blackwater, 86)</em>
+    </p>
     <p>
         <b><u>Stark</u>:</b><br>
-        <a href="https://thronesdb.com/card/11021" target="_blank">Wyman Manderly</a> <em>(The March on Winterfell, 21)</em>
-        <br>
-        <a href="https://thronesdb.com/card/02102" target="_blank">Ward</a> <em>(True Steel, 102)</em> <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/11082" class="new" target="_blank">Skagos</a>
-            <em>(In Daznak’s Pit, 82)</em>
-        </span>
-        <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/11061" class="new" target="_blank">Meera Reed</a>
-            <em>(Music of Dragons, 61)</em>
-        </span>
+        <a href="https://thronesdb.com/card/11021" target="_blank">Wyman Manderly</a> <em>(The March on Winterfell, 21)</em><br>
+        <a href="https://thronesdb.com/card/02102" target="_blank">Ward</a> <em>(True Steel, 102)</em><br>
+        <a href="https://thronesdb.com/card/11082" target="_blank">Skagos</a> <em>(In Daznak’s Pit, 82)</em><br>
+        <a href="https://thronesdb.com/card/11061" target="_blank">Meera Reed</a> <em>(Music of Dragons, 61)</em>
     </p>
     <p>
         <b><u>Tyrell</u>:</b><br>
@@ -635,9 +612,17 @@
             38)</em><br>
         <a href="https://thronesdb.com/card/09001" target="_blank">Mace Tyrell</a> <em>(House of Thorns, 1)</em><br>
         <a href="https://thronesdb.com/card/09017" target="_blank">The Hightower</a> <em>(House of Thorns, 17)</em><br>
+        <a href="https://thronesdb.com/card/11044" target="_blank">Growing Ambition</a><em>(Streets of King’s Landing, 44)</em><br>
         <span class="new">
-            <a href="https://thronesdb.com/card/11044" class="new" target="_blank">Growing Ambition</a>
-            <em>(Streets of King’s Landing, 44)</em>
+            <a href="https://thronesdb.com/card/13103" class="new" target="_blank">The Queen's Retinue</a> <em>(Long May He Reign, 103)</em>
+        </span>
+        <br>
+        <span class="new">
+            <a href="https://thronesdb.com/card/13044" class="new" target="_blank">Unexpected Guile</a> <em>(Pit of Snakes, 44)</em>
+        </span>
+        <br>
+        <span class="new">
+            <a href="https://thronesdb.com/card/06063" class="new" target="_blank">Oldtown Informer</a> <em>(The Red Wedding, 63)</em>
         </span>
     </p>
 
@@ -671,10 +656,12 @@
         <br>
         <a href="https://thronesdb.com/card/06040" target="_blank">The Annals of Castle Black</a> <em>(Guarding the Realm, 40)</em>
         <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/08120" class="new" target="_blank">You Win or You Die</a>
-            <em>(Someone Always Tells, 120)</em>
-        </span>
+        <a href="https://thronesdb.com/card/08120" target="_blank">You Win or You Die</a><em>(Someone Always Tells, 120)</em>
+    </p>
+
+    <p class="new"><b><u>Baratheon</u>:</b><br>
+        <a href="https://thronesdb.com/card/13107" target="_blank" class="new">Robert Baratheon</a> <em>(Long May He Reign, 107)</em>
+
     </p>
 
     <p><b><u>Greyjoy</u>:</b><br>
@@ -689,10 +676,7 @@
         <a href="https://thronesdb.com/card/05010" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock,
             10)</em>
         <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/06011" class="new" target="_blank">Drowned Disciple</a>
-            <em>(All Men Are Fools, 11)</em>
-        </span>
+        <a href="https://thronesdb.com/card/06011" target="_blank">Drowned Disciple</a><em>(All Men Are Fools, 11)</em>
     </p>
 
     <p><b><u>Martell</u>:</b><br>
@@ -1017,8 +1001,8 @@
         a player’s deck is no longer imminent.
     </p>
 
-    <h3 id="FAQ_22" class="new">No Surprises</h3>
-    <p class="new">
+    <h3 id="FAQ_22">No Surprises</h3>
+    <p>
         <i>
             My opponent plays <a href="https://thronesdb.com/card/13022" target="_blank">No Surprises</a>
             (King’s Landing, 22), which states that I cannot “bring cards out of shadows.” Can I still use the ability
@@ -1026,15 +1010,15 @@
             to put a card directy into play from shadows?
         </i>
     </p>
-    <p class="new">
+    <p>
         No. Any effect that causes a card to come out of shadows is
         considered to be “bringing a card out of shadows,” including
         effects like Starfall Spy that put a card into play from shadows.
         Therefore, such effects are prevented by the effect of No Suprises.
     </p>
 
-    <h3 id="FAQ_23" class="new">&quot;A Cask of Ale&quot;</h3>
-    <p class="new">
+    <h3 id="FAQ_23">&quot;A Cask of Ale&quot;</h3>
+    <p>
         <i>
             Can I use <a href="https://thronesdb.com/card/14023" target="_blank">&quot;A Cask of Ale&quot;</a>
             (Fury of the Storm, 23) to move power to a plot card, a melee title, or an agenda?
@@ -1047,8 +1031,8 @@
         to an agenda, as agendas are not in play.
     </p>
 
-    <h3 id="FAQ_24" class="new">Baelor Blacktyde</h3>
-    <p class="new">
+    <h3 id="FAQ_24">Baelor Blacktyde</h3>
+    <p>
         <i>
             If my opponent has <a href="https://thronesdb.com/card/13011" target="_blank">Baelor Blacktyde</a>
             (King’s Landing, 11) in play and I play
@@ -1062,6 +1046,31 @@
         an event from your discard pile if there are no other copies of
         that event in your discard pile.
     </p>
+
+    <h3 id="FAQ_25" class="new">Time of Plenty</h3>
+    <p class="new"><i>Does the effect on <a href="https://thronesdb.com/card/05051" target="_blank" class="new">
+        Time of Plenty</a> (Lions of Casterly Rock, 51) increase the number of cards drawn by a card effect triggered
+        during the draw phase?</i></p>
+    <p class="new">No. Card effects like Time of Plenty that modify the number of cards a player draws &quot;in the draw
+        phase&quot; only modify the 2 cards drawn as part of framework event step 2.2, &quot;Draw.&quot;
+        Card effects that occur during the draw phase are not modified.</p>
+
+    <h3 id="FAQ_26" class="new">Dothraki Handmaiden</h3>
+    <p class="new"><i>If I have a facedown card attached to
+        <a href="https://thronesdb.com/card/15014" target="_blank" class="new">Dothraki Handmaiden</a>
+        (Dragons of the East, 14) and use the Handmaiden’s constant
+        ability to marshal that card, is it considered to have entered play?</i></p>
+    <p class="new">No. The card is already in play as an attachment on Dothraki Handmaiden, so marshaling it will not
+        cause it to &quot;enter play.&quot; You will not be able to trigger any effects that occur when a card
+        &quot;enters play.&quot;</p>
+
+
+    <h3 id="FAQ_27" class="new">The Iron Throne (LMHR)</h3>
+    <p class="new"><i>Can I name a plot card with <a href="https://thronesdb.com/card/13117" target="_blank" class="new">
+        The Iron Throne</a> (Long May He Reign, 117) to prevent my opponent from revealing that plot during the plot
+        phase?</i></p>
+    <p class="new">No. Plot cards are not marshaled, played, or put into play, so The Iron Throne does not prevent
+        a player from revealing a plot card with the chosen name.</p>
 
     <h1 id="Quick_Reference">Quick Reference</h1>
 
@@ -1088,7 +1097,6 @@
         sequences are observed.</p>
 
     <ol>
-
         <li>Interrupts to the end of phase may be used.</li>
         <br>
         <li>"<i>Until the end of the phase</i>" lasting abilities (and "<i>during the X phase</i>" abilities) expire.
