moves Drowned God into correct section.
applied some minor whitespace fixes while at it.

--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -570,9 +570,9 @@
         <a href="https://thronesdb.com/card/02091" target="_blank">Raider from Pyke</a> <em>(Calm Over Westeros, 91)</em><br>
         <a href="https://thronesdb.com/card/02092" target="_blank">Iron Mines</a> <em>(Calm Over Westeros, 92)</em><br>
         <a href="https://thronesdb.com/card/11051" target="_blank">Drowned God Fanatic</a> <em>(Streets of King's Landing, 51)</em><br>
-        <a href="https://thronesdb.com/card/06011" target="_blank">Drowned Disciple</a><em>(All Men Are Fools, 11)</em><br>
-        <a href="https://thronesdb.com/card/12002" target="_blank">Euron Crow’s Eye</a><em>(Kings of the Isles, 2)</em><br>
-        <a href="https://thronesdb.com/card/12046" target="_blank">We Take Westeros!</a><em>(Kings of the Isles, 46)</em>
+        <a href="https://thronesdb.com/card/06011" target="_blank">Drowned Disciple</a> <em>(All Men Are Fools, 11)</em><br>
+        <a href="https://thronesdb.com/card/12002" target="_blank">Euron Crow’s Eye</a> <em>(Kings of the Isles, 2)</em><br>
+        <a href="https://thronesdb.com/card/12046" target="_blank">We Take Westeros!</a> <em>(Kings of the Isles, 46)</em>
     </p>
 
     <p>
@@ -586,7 +586,7 @@
         <a href="https://thronesdb.com/card/01109" target="_blank">The Red Viper</a> <em>(Core, 109)</em><br>
         <a href="https://thronesdb.com/card/04017" target="_blank">Tower of the Sun</a> <em>(Across the Seven Kingdoms, 17)</em><br>
         <a href="https://thronesdb.com/card/11076" target="_blank">A Mission in Essos</a> <em>(Music of Dragons, 76)</em><br>
-        <a href="https://thronesdb.com/card/12029" target="_blank">Desert Raider</a><em>(Kings of the Isles, 29)</em>
+        <a href="https://thronesdb.com/card/12029" target="_blank">Desert Raider</a> <em>(Kings of the Isles, 29)</em>
     </p>
 
     <p class="new">
@@ -612,7 +612,7 @@
             38)</em><br>
         <a href="https://thronesdb.com/card/09001" target="_blank">Mace Tyrell</a> <em>(House of Thorns, 1)</em><br>
         <a href="https://thronesdb.com/card/09017" target="_blank">The Hightower</a> <em>(House of Thorns, 17)</em><br>
-        <a href="https://thronesdb.com/card/11044" target="_blank">Growing Ambition</a><em>(Streets of King’s Landing, 44)</em><br>
+        <a href="https://thronesdb.com/card/11044" target="_blank">Growing Ambition</a> <em>(Streets of King’s Landing, 44)</em><br>
         <span class="new">
             <a href="https://thronesdb.com/card/13103" class="new" target="_blank">The Queen's Retinue</a> <em>(Long May He Reign, 103)</em>
         </span>
@@ -656,7 +656,7 @@
         <br>
         <a href="https://thronesdb.com/card/06040" target="_blank">The Annals of Castle Black</a> <em>(Guarding the Realm, 40)</em>
         <br>
-        <a href="https://thronesdb.com/card/08120" target="_blank">You Win or You Die</a><em>(Someone Always Tells, 120)</em>
+        <a href="https://thronesdb.com/card/08120" target="_blank">You Win or You Die</a> <em>(Someone Always Tells, 120)</em>
     </p>
 
     <p class="new"><b><u>Baratheon</u>:</b><br>
@@ -668,15 +668,17 @@
         <a href="https://thronesdb.com/card/01078" target="_blank">Great Kraken</a> <em>(Core, 78)</em><br>
         <a href="https://thronesdb.com/card/02012" target="_blank">Rise of the Kraken</a> <em>(Taking the Black,
             12)</em><br>
-        <a href="https://thronesdb.com/card/09028" target="_blank">Corpse Lake</a> <em>(House of Thorns, 28)</em></p>
+        <a href="https://thronesdb.com/card/09028" target="_blank">Corpse Lake</a> <em>(House of Thorns, 28)</em>
+        <br>
+        <a href="https://thronesdb.com/card/06011" target="_blank">Drowned Disciple</a> <em>(All Men Are Fools, 11)</em>
+
+    </p>
 
     <p><b><u>Lannister</u>:</b><br>
         <a href="https://thronesdb.com/card/05001" target="_blank">Cersei Lannister</a> <em>(Lions of Casterly Rock,
             1)</em><br>
         <a href="https://thronesdb.com/card/05010" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock,
             10)</em>
-        <br>
-        <a href="https://thronesdb.com/card/06011" target="_blank">Drowned Disciple</a><em>(All Men Are Fools, 11)</em>
     </p>
 
     <p><b><u>Martell</u>:</b><br>
