relabeled "Restricted List" to "Tournament Legality".
since the scope of this check has been expanded, the wording
needed adjustment as well.

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -495,8 +495,8 @@ article.review .review-comment {
     background: rgba(255,0,0,.5);
 }
 
-/**************** Restricted List indicators *******/
-.decklists .restricted-list-info,
-#decks .restricted-list-info {
+/**************** Tournament Legality indicators *******/
+.decklists .tournament-legality-info,
+#decks .tournament-legality-info {
     font-size: small;
 }
