replaces hardwired domains with path helper.

--- a/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
@@ -1898,7 +1898,7 @@
         </li>
         <li>
             <s>At the time targets are chosen, any currently valid targets are eligible to be chosen. (This choice is not restricted only to targets that were present during the initiation check.)</s> Overruled by <a
-            href="http://thronesdb.com/faq#Player_Choices_While_Initiating_Abilities"
+            href="{{ path('faq', { _fragment: 'Player_Choices_While_Initiating_Abilities' }) }}"
             target="_blank">FAQ (3.2)</a>.
         </li>
         <li> If multiple targets are required to be chosen by the same player, these are chosen simultaneously.</li>
