--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -60,7 +60,7 @@
             "url": "https://thronesdb.com/",
             "potentialAction": {
                 "@type": "SearchAction",
-                "target": "http://thronesdb.com/find/?q={search_term_string}",
+                "target": "https://thronesdb.com/find/?q={search_term_string}",
                 "query-input": "required name=search_term_string"
             }
         }
