outage banner on landing page.

--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -2,6 +2,7 @@
 {% import "AppBundle::macros.html.twig" as macros %}
 
 {% block body %}
+    <div class="alert alert-danger" role="alert"><strong>Scheduled Outage Notification:</strong> ThronesDB will be offline for maintenance work on April, 16th 2020 from 6pm PDT until approximately midnight.</div>
 
     <div class="main container">
         <h1 class="site-title hidden-xs">Thr<span style="position:relative">o<span class="icon icon-power"
