--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -15,7 +15,7 @@
 <div style="text-align:justify">
 
     <h1 id="FAQ">Notes, Errata, and Frequently Asked Questions</h1>
-    <h3>Version 3.0, effective 01/13/2020</h3>
+    <h3>The Conclave (Version 1.0), effective 04/13/2020 (<a href="https://agot.cards/wp-content/uploads/2020/04/RL_list_041320-1.pdf" target="_blank">link</a>).</h3>
 
     <p>This document contains card clarification, errata, rule clarifications, frequently asked questions, and quick
         reference material for <em>A Game of Thrones: The Card Game</em>. The most recent version of this document is
@@ -24,12 +24,15 @@
             Reference</a>. All changes and additions to this document since the previous version are marked in <span
                 class="new">red</span>.</p>
 
+    <p><em>This document is a continuation of the final FFG-issued FAQ (Version 3.0, effective 01/13/2020), which can be found
+        <a href="https://images-cdn.fantasyflightgames.com/filer_public/7c/64/7c642fb4-cce0-4aae-8633-3a861d7727fd/agot_lcg_faq_30.pdf" target="_blank">here</a>.
+        </em>
+    </p>
+
     <p>
-        <b>New Content (v3.0):</b>
-        <a href="#Rulings_and_Clarifications">Rulings and Clarifications</a>,
+        <b>New Content (Conclave v1.0):</b>
         <a href="#Joust_Restricted_List">Joust Restricted List</a>,
-        <a href="#Melee_Restricted_List">Melee Restricted List</a>,
-        <a href="#Frequently_Asked_Questions">Frequently Asked Questions</a>
+        <a href="#Banned_List">Banned List</a>
     </p>
 
     <p class="mplain"><b>Notes</b> and <b>Related</b> cards added by <b>mplain</b>.</p>
@@ -356,11 +359,11 @@
     <p class="mplain"><b>Related:</b> <a href="{{ path('cards_zoom', { card_code: "01104" }) }}" target="_blank">Arianne Martell</a> +
         <a href="{{ path('cards_zoom', { card_code: "08041" }) }}" target="_blank">Ramsay Snow</a>.</p>
 
-    <h3 id="Card_Abilities_During_Setup" class="new">(1.9) Card Abilities During Setup</h3>
-    <p class="new">Because setup occurs before the game begins, card abilities are not active during setup unless the
+    <h3 id="Card_Abilities_During_Setup">(1.9) Card Abilities During Setup</h3>
+    <p>Because setup occurs before the game begins, card abilities are not active during setup unless the
         ability specifically references setup or a timing point during setup (such as “after all agendas are announced”).
     </p>
-    <p class="new"><em>For example: <a href="{{ path('cards_zoom', { card_code: "10041" }) }}" target="_blank" class="new">Oldtown
+    <p><em>For example: <a href="{{ path('cards_zoom', { card_code: "10041" }) }}" target="_blank">Oldtown
         Scholar</a> (Sands of Dorne, 41) cannot trigger its reaction after a player replenishes his or her hand during
         step 10 of setup.</em></p>
 
@@ -562,9 +565,16 @@
         <a href="{{ path('cards_zoom', { card_code: "09051" }) }}" target="_blank">Trade Routes</a> <em>(House of Thorns, 51)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "12045" }) }}" target="_blank">Sea of Blood</a> <em>(Kings of the Isles, 45)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "06038" }) }}" target="_blank">Great Hall</a> <em>(Guarding the Realm, 38)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "10048" }) }}" target="_blank">Forced March</a> <em>(Sands of Dorne, 48)</em>
+        <a href="{{ path('cards_zoom', { card_code: "10048" }) }}" target="_blank">Forced March</a> <em>(Sands of Dorne, 48)</em><br>
+        <a class="new" href="{{ path('cards_zoom', { card_code: "08080" }) }}" target="_blank">The King in the North</a> <em>(Favor of the Old Gods, 80)</em><br>
+        <a class="new" href="{{ path('cards_zoom', { card_code: "12047" }) }}" target="_blank"> Return to the Fields</a> <em>(Kings of the Isles, 47)</em><br>
+        <a class="new" href="{{ path('cards_zoom', { card_code: "13079" }) }}" target="_blank">Kingdom of Shadows</a> <em>(Beneath the Red Keep, 79)</em><br>
+        <a class="new" href="{{ path('cards_zoom', { card_code: "15045" }) }}" target="_blank">Bribery</a> <em>(Dragons of the East, 45)</em><br>
     </p>
-
+    <p class="new">
+        <b><u>Baratheon</u>:</b><br>
+        <a class="new" href="{{ path('cards_zoom', { card_code: "14008" }) }}" target="_blank">Selyse Baratheon</a> <em>(Fury of the Storm, 8)</em>
+    </p>
     <p>
         <b><u>Greyjoy</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "02091" }) }}" target="_blank">Raider from Pyke</a> <em>(Calm Over Westeros, 91)</em><br>
@@ -572,13 +582,14 @@
         <a href="{{ path('cards_zoom', { card_code: "11051" }) }}" target="_blank">Drowned God Fanatic</a> <em>(Streets of King's Landing, 51)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "06011" }) }}" target="_blank">Drowned Disciple</a> <em>(All Men Are Fools, 11)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "12002" }) }}" target="_blank">Euron Crow’s Eye</a> <em>(Kings of the Isles, 2)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "12046" }) }}" target="_blank">We Take Westeros!</a> <em>(Kings of the Isles, 46)</em>
+        <a href="{{ path('cards_zoom', { card_code: "12046" }) }}" target="_blank">We Take Westeros!</a> <em>(Kings of the Isles, 46)</em><br>
+        <a class="new" href="{{ path('cards_zoom', { card_code: "11012" }) }}" target="_blank">Nighttime Marauders</a> <em>(The Shadow City, 12)</em><br>
     </p>
 
     <p>
         <b><u>Lannister</u>:</b><br>
-        <a href="{{ path('cards_zoom', { card_code: "05010" }) }}" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock,
-            10)</em>
+        <a href="{{ path('cards_zoom', { card_code: "05010" }) }}" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock, 10)</em><br>
+        <a class="new" href="{{ path('cards_zoom', { card_code: "15030" }) }}" target="_blank">The Red Keep</a> <em>(Dragons of the East, 30)</em><br>
     </p>
 
     <p>
@@ -589,10 +600,12 @@
         <a href="{{ path('cards_zoom', { card_code: "12029" }) }}" target="_blank">Desert Raider</a> <em>(Kings of the Isles, 29)</em>
     </p>
 
-    <p class="new">
+    <p>
         <b><u>Night's Watch</u></b><br>
-        <a href="{{ path('cards_zoom', { card_code: "13085" }) }}" target="_blank" class="new">Yoren</a> <em>(The Blackwater, 85)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "13086" }) }}" target="_blank" class="new">Bound for the Wall</a> <em>(The Blackwater, 86)</em>
+        <a href="{{ path('cards_zoom', { card_code: "13085" }) }}" target="_blank">Yoren</a> <em>(The Blackwater, 85)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "13086" }) }}" target="_blank">Bound for the Wall</a> <em>(The Blackwater, 86)</em><br>
+        <a class="new" href="{{ path('cards_zoom', { card_code: "11085" }) }}" target="_blank">Three-Finger Hobb</a> <em>(In Daznak's Pit, 85)</em><br>
+        <a class="new" href="{{ path('cards_zoom', { card_code: "15033" }) }}" target="_blank">Clydas</a> <em>(Dragons of the East, 33)</em>
     </p>
     <p>
         <b><u>Stark</u>:</b><br>
@@ -613,24 +626,18 @@
         <a href="{{ path('cards_zoom', { card_code: "09001" }) }}" target="_blank">Mace Tyrell</a> <em>(House of Thorns, 1)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "09017" }) }}" target="_blank">The Hightower</a> <em>(House of Thorns, 17)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "11044" }) }}" target="_blank">Growing Ambition</a> <em>(Streets of King’s Landing, 44)</em><br>
-        <span class="new">
-            <a href="{{ path('cards_zoom', { card_code: "13103" }) }}" class="new" target="_blank">The Queen's Retinue</a> <em>(Long May He Reign, 103)</em>
-        </span>
-        <br>
-        <span class="new">
-            <a href="{{ path('cards_zoom', { card_code: "13044" }) }}" class="new" target="_blank">Unexpected Guile</a> <em>(Pit of Snakes, 44)</em>
-        </span>
-        <br>
-        <span class="new">
-            <a href="{{ path('cards_zoom', { card_code: "06063" }) }}" class="new" target="_blank">Oldtown Informer</a> <em>(The Red Wedding, 63)</em>
-        </span>
+        <a href="{{ path('cards_zoom', { card_code: "13103" }) }}" target="_blank">The Queen's Retinue</a> <em>(Long May He Reign, 103)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "13044" }) }}" target="_blank">Unexpected Guile</a> <em>(Pit of Snakes, 44)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "06063" }) }}" target="_blank">Oldtown Informer</a> <em>(The Red Wedding, 63)</em>
     </p>
 
     <p>
         <b><u>Targaryen</u>:</b><br>
-        <a href="{{ path('cards_zoom', { card_code: "11033" }) }}" target="_blank">Hizdahr zo Loraq</a> <em>(The March on Winterfell, 33)</em>
-        <br>
-        <a href="{{ path('cards_zoom', { card_code: "11034" }) }}" target="_blank">Meereen</a> <em>(The March on Winterfell, 34)</em>
+        <a href="{{ path('cards_zoom', { card_code: "11033" }) }}" target="_blank">Hizdahr zo Loraq</a> <em>(The March on Winterfell, 33)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "11034" }) }}" target="_blank">Meereen</a> <em>(The March on Winterfell, 34)</em><br>
+        <a class="new" href="{{ path('cards_zoom', { card_code: "09037" }) }}" target="_blank">Qotho</a> <em>(House of Thorns, 37)</em><br>
+        <a class="new" href="{{ path('cards_zoom', { card_code: "11114" }) }}" target="_blank">Gifts for the Widow</a> <em>(Dragons of the East, 14)</em><br>
+        <a class="new" href="{{ path('cards_zoom', { card_code: "15022" }) }}" target="_blank">Overwhelming Numbers</a> <em>(Dragons of the East, 22)</em>
     </p>
 
     <h2 id="Melee_Restricted_List">Melee Restricted List</h2>
@@ -659,8 +666,8 @@
         <a href="{{ path('cards_zoom', { card_code: "08120" }) }}" target="_blank">You Win or You Die</a> <em>(Someone Always Tells, 120)</em>
     </p>
 
-    <p class="new"><b><u>Baratheon</u>:</b><br>
-        <a href="{{ path('cards_zoom', { card_code: "13107" }) }}" target="_blank" class="new">Robert Baratheon</a> <em>(Long May He Reign, 107)</em>
+    <p><b><u>Baratheon</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "13107" }) }}" target="_blank">Robert Baratheon</a> <em>(Long May He Reign, 107)</em>
 
     </p>
 
@@ -708,6 +715,9 @@
         <br>
         <a href="{{ path('cards_zoom', { card_code: "03038" }) }}" target="_blank">To the Rose Banner!</a> <em>(Wolves of the North, 38)</em>
     </p>
+
+    <h1 id="Banned_List">Banned Cards</h1>
+    <p>The complete set of <a href="{{ path('cards_list', { pack_code: "TTWDFL" }) }}" target="_blank">The Things We Do For Love</a> is not legal for competitive play.</p>
 
     <h1 id="Frequently_Asked_Questions">Frequently Asked Questions</h1>
 
@@ -1049,29 +1059,29 @@
         that event in your discard pile.
     </p>
 
-    <h3 id="FAQ_25" class="new">Time of Plenty</h3>
-    <p class="new"><i>Does the effect on <a href="{{ path('cards_zoom', { card_code: "05051" }) }}" target="_blank" class="new">
+    <h3 id="FAQ_25">Time of Plenty</h3>
+    <p><i>Does the effect on <a href="{{ path('cards_zoom', { card_code: "05051" }) }}" target="_blank">
         Time of Plenty</a> (Lions of Casterly Rock, 51) increase the number of cards drawn by a card effect triggered
         during the draw phase?</i></p>
-    <p class="new">No. Card effects like Time of Plenty that modify the number of cards a player draws &quot;in the draw
+    <p>No. Card effects like Time of Plenty that modify the number of cards a player draws &quot;in the draw
         phase&quot; only modify the 2 cards drawn as part of framework event step 2.2, &quot;Draw.&quot;
         Card effects that occur during the draw phase are not modified.</p>
 
-    <h3 id="FAQ_26" class="new">Dothraki Handmaiden</h3>
-    <p class="new"><i>If I have a facedown card attached to
-        <a href="{{ path('cards_zoom', { card_code: "15014" }) }}" target="_blank" class="new">Dothraki Handmaiden</a>
+    <h3 id="FAQ_26">Dothraki Handmaiden</h3>
+    <p><i>If I have a facedown card attached to
+        <a href="{{ path('cards_zoom', { card_code: "15014" }) }}" target="_blank">Dothraki Handmaiden</a>
         (Dragons of the East, 14) and use the Handmaiden’s constant
         ability to marshal that card, is it considered to have entered play?</i></p>
-    <p class="new">No. The card is already in play as an attachment on Dothraki Handmaiden, so marshaling it will not
+    <p>No. The card is already in play as an attachment on Dothraki Handmaiden, so marshaling it will not
         cause it to &quot;enter play.&quot; You will not be able to trigger any effects that occur when a card
         &quot;enters play.&quot;</p>
 
 
-    <h3 id="FAQ_27" class="new">The Iron Throne (LMHR)</h3>
-    <p class="new"><i>Can I name a plot card with <a href="{{ path('cards_zoom', { card_code: "13117" }) }}" target="_blank" class="new">
+    <h3 id="FAQ_27">The Iron Throne (LMHR)</h3>
+    <p><i>Can I name a plot card with <a href="{{ path('cards_zoom', { card_code: "13117" }) }}" target="_blank">
         The Iron Throne</a> (Long May He Reign, 117) to prevent my opponent from revealing that plot during the plot
         phase?</i></p>
-    <p class="new">No. Plot cards are not marshaled, played, or put into play, so The Iron Throne does not prevent
+    <p>No. Plot cards are not marshaled, played, or put into play, so The Iron Throne does not prevent
         a player from revealing a plot card with the chosen name.</p>
 
     <h1 id="Quick_Reference">Quick Reference</h1>
