adds entry for prized keyword to the rules page.

--- a/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
@@ -1473,6 +1473,18 @@
 
     <p><strong>Related:</strong> <a href="#First_Player">First Player</a></p>
 
+    <h3 id="Prized">Prized</h3>
+    <p>Prized is a keyword ability. When a character, location, or attachment with the prized (X) keyword would leave
+        play, each opponent of that card's controller gains X power for his or her faction. This occurs immediately upon
+        the card leaving play, after resolving any interrupts to the card leaving play, but prior to triggering any
+        reactions to the card leaving play.</p>
+    <p>When an event with the prized (X) keyword is played, each opponent of the player who plays the event gains X
+        power for his or her faction. This occurs immediately upon the event being played, prior to initiating its
+        effects.</p>
+    <p>When a plot with the prized (X) keyword is placed in the used pile, each opponent of that plot's controller gains
+        X power for his or her faction.</p>
+    <p>If a card has multiple instances of the prized (X) keyword, those instances are cumulative.</p>
+
     <h3 id="Put_into_Play">Put into Play</h3>
 
     <p>Some card abilities may cause a card to be "put into play." Such abilities place the card directly into play from
