link prized entry to keywords section and back.

--- a/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
@@ -956,10 +956,10 @@
         </li>
     </ul>
 
-    <p><strong>Related:</strong> <a href="#Ambush">Ambush (X)</a>, <a href="#Insight">Insight</a>, <a
-                href="#Intimidate">Intimidate</a>, <a href="#Limited">Limited</a>, <a href="#No_Attachments">No
-            Attachments</a>, <a href="#Pillage">Pillage</a>, <a href="#Renown">Renown</a>, <a
-                href="#Stealth">Stealth</a>, <a href="#Terminal">Terminal</a></p>
+    <p><strong>Related:</strong> <a href="#Ambush">Ambush (X)</a>, <a href="#Insight">Insight</a>,
+        <a href="#Intimidate">Intimidate</a>, <a href="#Limited">Limited</a>,
+        <a href="#No_Attachments">No Attachments</a>, <a href="#Pillage">Pillage</a>, <a href="#Prized">Prized</a>,
+        <a href="#Renown">Renown</a>, <a href="#Stealth">Stealth</a>, <a href="#Terminal">Terminal</a></p>
 
     <h3 id="Kill_Killed">Kill, Killed</h3>
 
@@ -1484,6 +1484,8 @@
     <p>When a plot with the prized (X) keyword is placed in the used pile, each opponent of that plot's controller gains
         X power for his or her faction.</p>
     <p>If a card has multiple instances of the prized (X) keyword, those instances are cumulative.</p>
+
+    <p><strong>Related:</strong> <a href="#Keywords">Keywords</a></p>
 
     <h3 id="Put_into_Play">Put into Play</h3>
 
