--- a/src/AppBundle/Resources/views/Default/apiIntro.html.twig
+++ b/src/AppBundle/Resources/views/Default/apiIntro.html.twig
@@ -25,7 +25,7 @@
         <h3>Documentation</h3>
 
         The documentation can be found here: <a
-                href="{{ absolute_url(path('nelmio_api_doc_index')) }}">{{ absolute_url(path('nelmio_api_doc_index')) }}</a>.
+                href="{{ absolute_url(path('nelmio_api_doc.swagger_ui')) }}">{{ absolute_url(path('nelmio_api_doc.swagger_ui')) }}</a>.
 
         <h3>Examples</h3>
 
